--- a/org/organizationalunit/resource-role.yaml
+++ b/org/organizationalunit/resource-role.yaml
@@ -25,6 +25,7 @@ Resources:
                 Action:
                 - "organizations:DeleteOrganizationalUnit"
                 - "organizations:ListRoots"
+                - "organizations:UpdateOrganizationalUnit"
                 - "organizations:createOrganizationalUnit"
                 Resource: "*"
 Outputs:
