--- a/org/account/package.json
+++ b/org/account/package.json
@@ -9,7 +9,8 @@
     "scripts": {
         "build": "npx tsc",
         "prepack": "npm run build",
-        "submit": "cfn submit --region us-east-1",
+        "submit": "cfn generate && npm run build && cfn submit -vv --region us-east-1 --set-default",
+        "package": "cfn submit --dry-run -vv",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "dependencies": {
