--- a/cloud-formation/delay/sample.yml
+++ b/cloud-formation/delay/sample.yml
@@ -8,6 +8,6 @@ Parameters:
 
 Resources:
   Delay:
-    Type: OC::CloudFormation::Delay
+    Type: Community::CloudFormation::Delay
     Properties:
       Duration: !Ref duration
