--- a/cloud-formation/delay/template.yml
+++ b/cloud-formation/delay/template.yml
@@ -1,12 +1,19 @@
 AWSTemplateFormatVersion: "2010-09-09"
 Transform: AWS::Serverless-2016-10-31
-Description: AWS SAM template for the OC::Organizations::PasswordPolicy resource type
+Description: AWS SAM template for the Community::CloudFormation::Delay resource type
 
 Globals:
   Function:
     Timeout: 60  # docker start-up times can be long for SAM CLI
 
 Resources:
+  TestEntrypoint:
+    Type: AWS::Serverless::Function
+    Properties:
+      Handler: dist/handlers.testEntrypoint
+      Runtime: nodejs12.x
+      CodeUri: ./
+
   TypeFunction:
     Type: AWS::Serverless::Function
     Properties:
@@ -14,9 +21,3 @@ Resources:
       Runtime: nodejs12.x
       CodeUri: ./
 
-  TestEntrypoint:
-    Type: AWS::Serverless::Function
-    Properties:
-      Handler: dist/handlers.testEntrypoint
-      Runtime: nodejs12.x
-      CodeUri: ./
