--- a/iam/password-policy/package.json
+++ b/iam/password-policy/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "aws-cloudformation-delay",
-  "version": "0.1.0",
-  "description": "CloudFormation Resource Provider for AWS CloudFormation Delay",
+  "name": "aws-iam-passwordpolicy",
+  "version": "0.2.0",
+  "description": "CloudFormation Resource Provider for AWS IAM Password Policy",
   "main": "dist/handlers.js",
   "files": [
     "dist"
@@ -16,19 +16,28 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/eduardomourar/aws-resource-provider-delay.git"
+    "url": "git+https://github.com/org-formation/aws-resource-providers.git"
   },
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/eduardomourar/aws-resource-provider-delay/issues"
+    "url": "https://github.com/org-formation/aws-resource-providers/issues"
   },
-  "homepage": "https://github.com/eduardomourar/aws-resource-provider-delay#readme",
+  "homepage": "https://github.com/org-formation/aws-resource-providers#readme",
+  "engines": {
+    "node": ">=10.4.0",
+    "npm": ">=6.0.0"
+  },
   "dependencies": {
     "cfn-rpdk": "https://github.com/eduardomourar/cloudformation-cli-typescript-plugin/releases/download/v0.3.0/cfn-rpdk-0.3.0.tgz",
-    "class-transformer": "^0.3.1"
+    "class-transformer": "^0.3.1",
+    "uuid": "^7.0.3"
   },
   "devDependencies": {
     "@types/node": "^12.0.0",
+    "@types/uuid": "^7.0.3",
     "typescript": "^3.8.3"
+  },
+  "optionalDependencies": {
+    "aws-sdk": "~2.631.0"
   }
 }
