--- a/service-quotas/s3/.rpdk-config
+++ b/service-quotas/s3/.rpdk-config
@@ -1,5 +1,5 @@
 {
-    "typeName": "OC::ServiceQuotas::S3",
+    "typeName": "Community::ServiceQuotas::S3",
     "language": "typescript",
     "runtime": "nodejs12.x",
     "entrypoint": "dist/handlers.entrypoint",
