--- a/ec2/ebs-encryption-defaults/.rpdk-config
+++ b/ec2/ebs-encryption-defaults/.rpdk-config
@@ -1,5 +1,5 @@
 {
-    "typeName": "OC::ORG::EbsEncryptionDefaults",
+    "typeName": "Community::Organizations::EbsEncryptionDefaults",
     "language": "typescript",
     "runtime": "nodejs12.x",
     "entrypoint": "dist/handlers.entrypoint",
