--- a/ec2/ebs-encryption-defaults/package.json
+++ b/ec2/ebs-encryption-defaults/package.json
@@ -1,7 +1,7 @@
 {
     "name": "oc-org-EbsEncryptionDefaults",
     "version": "1.0.0",
-    "description": "AWS custom resource provider named OC::ORG::EbsEncryptionDefaults.",
+    "description": "AWS custom resource provider named Community::Organizations::EbsEncryptionDefaults.",
     "main": "dist/handlers.js",
     "files": [
         "dist"
