--- a/ec2/ebs-encryption-defaults/template.yml
+++ b/ec2/ebs-encryption-defaults/template.yml
@@ -1,6 +1,6 @@
 AWSTemplateFormatVersion: "2010-09-09"
 Transform: AWS::Serverless-2016-10-31
-Description: AWS SAM template for the OC::ORG::EbsEncryptionDefaults resource type
+Description: AWS SAM template for the Community::Organizations::EbsEncryptionDefaults resource type
 
 Globals:
   Function:
