--- a/examples/org-example-template.yml
+++ b/examples/org-example-template.yml
@@ -1,30 +1,30 @@
 AWSTemplateFormatVersion: 2010-09-09
 Resources:
   OlafOU:
-    Type: 'OC::ORG::OrganizationalUnit'
+    Type: 'Community::Organizations::OrganizationalUnit'
     Properties:
       OrganizationalUnitName: 'Olaf'
   
   ChildOU:
-    Type: 'OC::ORG::OrganizationalUnit'
+    Type: 'Community::Organizations::OrganizationalUnit'
     Properties:
       OrganizationalUnitName: 'Child'
       ParentOU: !GetAtt OlafOU.Id
 
   Child2OU:
-    Type: 'OC::ORG::OrganizationalUnit'
+    Type: 'Community::Organizations::OrganizationalUnit'
     Properties:
       OrganizationalUnitName: 'Child2'
       ParentOU: !GetAtt OlafOU.Id
 
   ChildChildOU:
-    Type: 'OC::ORG::OrganizationalUnit'
+    Type: 'Community::Organizations::OrganizationalUnit'
     Properties:
       OrganizationalUnitName: 'Child'
       ParentOU: !GetAtt OlafOU.Id
 
   Account1:
-    Type: 'OC::ORG::Account'
+    Type: 'Community::Organizations::Account'
     Properties:
       ParentOU: !GetAtt OlafOU.Id
       AccountName: Production 1 Account
@@ -34,7 +34,7 @@ Resources:
  
 
   # ServiceControlPolicy:
-  #   Type: 'OC::ORG::ServiceControlPolicy'
+  #   Type: 'Community::Organizations::ServiceControlPolicy'
   #   Properties:
   #     PolicyName: RestrictUnusedRegions
   #     Description: Restrict Unused regions
