--- a/examples/servicequotas.yml
+++ b/examples/servicequotas.yml
@@ -1,6 +1,6 @@
 AWSTemplateFormatVersion: 2010-09-09
 Resources:
   CloudFormationQuotas:
-    Type: 'OC::ServiceQuotas::CloudFormationQuotas'
+    Type: 'Community::ServiceQuotas::CloudFormationQuotas'
     Properties:
       Stacks: 200
