--- a/iam/passwordpolicy/sample.yml
+++ b/iam/passwordpolicy/sample.yml
@@ -10,7 +10,7 @@ Parameters:
 
 Resources:
   PasswordPolicy:
-    Type: OC::Organizations::PasswordPolicy
+    Type: Community::Organizationsanizations::PasswordPolicy
     Properties:
       MinimumPasswordLength: !Sub '${minimumPasswordLength}'
       RequireLowercaseCharacters: true
