--- a/org/account/package.json
+++ b/org/account/package.json
@@ -1,7 +1,7 @@
 {
     "name": "oc-org-account",
     "version": "1.0.0",
-    "description": "AWS custom resource provider named OC::ORG::Account.",
+    "description": "AWS custom resource provider named Community::Organizations::Account.",
     "main": "dist/handlers.js",
     "files": [
         "dist"
