--- a/org/organization-root/package.json
+++ b/org/organization-root/package.json
@@ -1,7 +1,7 @@
 {
     "name": "oc-org-organizationroot",
     "version": "1.0.0",
-    "description": "AWS custom resource provider named OC::ORG::OrganizationRoot.",
+    "description": "AWS custom resource provider named Community::Organizations::OrganizationRoot.",
     "main": "dist/handlers.js",
     "files": [
         "dist"
