added documentation, list of resource providers

--- a/service-quotas/s3/resource-role.yaml
+++ b/service-quotas/s3/resource-role.yaml
@@ -23,11 +23,10 @@ Resources:
             Statement:
               - Effect: Allow
                 Action:
-                - "initech:CreateReport"
-                - "initech:DeleteReport"
-                - "initech:DescribeReport"
-                - "initech:ListReports"
-                - "initech:UpdateReport"
+                - "cloudformation:DescribeAccountLimits"
+                - "servicequotas:getServiceQuota"
+                - "servicequotas:listRequestedServiceQuotaChangeHistoryByQuota"
+                - "servicequotas:requestServiceQuotaIncrease"
                 Resource: "*"
 Outputs:
   ExecutionRoleArn:
