--- a/service-quotas/cloud-formation/package.json
+++ b/service-quotas/cloud-formation/package.json
@@ -15,7 +15,8 @@
     },
     "dependencies": {
         "cfn-rpdk": "https://github.com/eduardomourar/cloudformation-cli-typescript-plugin/releases/download/v0.3.0/cfn-rpdk-0.3.0.tgz",
-        "class-transformer": "^0.3.1"
+        "class-transformer": "^0.3.1",
+        "community-resource-providers-common": "file:../../common"
     },
     "devDependencies": {
         "@types/node": "^12.0.0",
