--- a/common/package.json
+++ b/common/package.json
@@ -1,12 +1,16 @@
 {
     "name": "community-resource-providers-common",
-    "version": "1.0.0",
+    "version": "0.1.2",
     "description": "",
     "main": "index.js",
     "scripts": {
+        "build": "npx ttsc",
+        "prepublishOnly": "npm run build",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
-    "files": ["lib/**/*"],
+    "files": [
+        "lib/**/*"
+    ],
     "author": "",
     "license": "ISC",
     "dependencies": {
