--- a/service-quotas/s3/resource-role.yaml
+++ b/service-quotas/s3/resource-role.yaml
@@ -23,7 +23,7 @@ Resources:
             Statement:
               - Effect: Allow
                 Action:
-                - "cloudformation:DescribeAccountLimits"
+                - "servicequotas:GetAWSDefaultServiceQuota"
                 - "servicequotas:getServiceQuota"
                 - "servicequotas:listRequestedServiceQuotaChangeHistoryByQuota"
                 - "servicequotas:requestServiceQuotaIncrease"
