--- a/ec2/ebs-encryption-defaults/package.json
+++ b/ec2/ebs-encryption-defaults/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "community-ec2-ebs-encryption-defaults",
+    "name": "community-ec2-ebsencryptiondefaults",
     "version": "0.1.0",
     "description": "AWS custom resource provider named Community::Organizations::EbsEncryptionDefaults.",
     "main": "dist/handlers.js",
@@ -9,8 +9,9 @@
     "scripts": {
         "build": "npx tsc",
         "prepack": "npm run build",
-        "submit": "cfn generate && npm run build && cfn submit -vv --region us-east-2 --set-default",
-        "package": "cfn submit --dry-run -vv",
+        "submit": "cfn generate && npm run build && cfn submit -vv --region us-east-1 --set-default",
+        "package": "cfn submit --dry-run -vv && cp ${npm_package_name}.zip ${npm_package_name}-${npm_package_version}.zip",
+        "publish": "npm run package && aws s3 cp ${npm_package_name}-${npm_package_version}.zip s3://community-resource-provider-catalog/${npm_package_name}-${npm_package_version}.zip",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "dependencies": {
