--- a/iam/password-policy/package.json
+++ b/iam/password-policy/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aws-iam-passwordpolicy",
+  "name": "community-iam-passwordpolicy",
   "version": "0.2.0",
   "description": "CloudFormation Resource Provider for AWS IAM Password Policy",
   "main": "dist/handlers.js",
@@ -9,10 +9,10 @@
   "scripts": {
     "build": "npx tsc",
     "prepack": "npm run build",
-    "start": "sam local start-lambda",
-    "test": "cfn test",
-    "package": "cfn submit --dry-run -vv",
-    "submit": "cfn submit --set-default -vv"
+    "submit": "cfn generate && npm run build && cfn submit -vv --region us-east-1 --set-default",
+    "package": "cfn submit --dry-run -vv && cp ${npm_package_name}.zip ${npm_package_name}-${npm_package_version}.zip",
+    "publish": "npm run package && aws s3 cp ${npm_package_name}-${npm_package_version}.zip s3://community-resource-provider-catalog/${npm_package_name}-${npm_package_version}.zip",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
