--- a/service-quotas/cloud-formation/package.json
+++ b/service-quotas/cloud-formation/package.json
@@ -10,8 +10,8 @@
         "build": "npx tsc",
         "prepack": "npm run build",
         "submit": "cfn generate && npm run build && cfn submit -vv --region us-east-1 --set-default",
-        "package": "cfn submit --dry-run -vv",
-        "publish": "npm run package && aws s3 cp community-servicequotas-cloudformation.zip s3://community-resource-provider-catalog/community-servicequotas-cloudformation.zip",
+        "package": "cfn submit --dry-run -vv && cp ${npm_package_name}.zip ${npm_package_name}-${npm_package_version}.zip",
+        "publish": "npm run package && aws s3 cp ${npm_package_name}-${npm_package_version}.zip s3://community-resource-provider-catalog/${npm_package_name}-${npm_package_version}.zip",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "dependencies": {
@@ -21,9 +21,7 @@
     },
     "devDependencies": {
         "@types/node": "^12.0.0",
-        "typescript": "^3.8.3"
-    },
-    "optionalDependencies": {
+        "typescript": "^3.8.3",
         "aws-sdk": "^2.656.0"
     }
 }
