--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,15 +3,18 @@
         "target": "ES2017",
         "module": "commonjs",
         "noImplicitAny": true,
+        "allowJs": true,
         "alwaysStrict": true,
         "esModuleInterop": true,
+        "removeComments": true,
         "moduleResolution": "node",
-        "allowJs": true,
+        "sourceMap": false,
         "experimentalDecorators": true,
+        "resolveJsonModule": true,
         "outDir": "dist"
     },
     "include": [
-        "src/**/*.ts"
+        "**/src/**/*.ts"
     ],
     "exclude": [
         "node_modules"
