--- a/cloud-formation/delay/package.json
+++ b/cloud-formation/delay/package.json
@@ -12,7 +12,9 @@
     "submit": "cfn generate && npm run build && cfn submit -vv --region us-east-1 --set-default",
     "package": "cfn submit --dry-run -vv && cp ${npm_package_name}.zip ${npm_package_name}-${npm_package_version}.zip",
     "publish": "npm run package && aws s3 cp ${npm_package_name}-${npm_package_version}.zip s3://community-resource-provider-catalog/${npm_package_name}-${npm_package_version}.zip",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx jest",
+    "test:integration": "cfn test",
+    "validate": "cfn validate"
   },
   "repository": {
     "type": "git",
