--- a/package.json
+++ b/package.json
@@ -3,14 +3,16 @@
     "version": "0.1.0",
     "description": "A community driven repository where you can find AWS Resource Type Providers for different purposes.",
     "scripts": {
-        "bootstrap": "npm install lerna && lerna bootstrap && npm install",
-        "reset": "npm run cleanup && rimraf -rf node_modules && npm run bootstrap",
-        "cleanup": "lerna run cleanup --stream --parallel",
-        "build": "npx tsc",
+        "bootstrap": "npm ci --optional && npx lerna bootstrap",
+        "reset": "npm run cleanup && npx rimraf -rf node_modules && npm run bootstrap",
+        "cleanup": "npx lerna run cleanup --stream --parallel",
+        "build": "npx lerna run build",
         "lint": "npx eslint --ext .ts,.js .",
         "lint:fix": "npx eslint --fix --ext .ts,.js .",
         "test": "npx jest",
-        "test:debug": "npx --node-arg=--inspect jest --runInBand"
+        "test:debug": "npx --node-arg=--inspect jest --runInBand",
+        "test:integration": "npx lerna run test:integration",
+        "validate": "npx lerna run validate -- -vv"
     },
     "engines": {
         "node": ">=10.4.0",
