--- a/common/package.json
+++ b/common/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "build": "npx ttsc",
+        "build": "npx tsc",
         "prepublishOnly": "npm run build",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
