--- a/iam/password-policy/package.json
+++ b/iam/password-policy/package.json
@@ -33,6 +33,7 @@
     "uuid": "^7.0.3"
   },
   "devDependencies": {
+    "@jurijzahn8019/aws-promise-jest-mock": "^2.1.5",
     "@types/node": "^12.0.0",
     "@types/uuid": "^7.0.3",
     "typescript": "^3.8.3"
