--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -19,6 +19,7 @@ jobs:
       AWS_DEFAULT_REGION: "eu-central-1"
       LOG_PATH: /tmp/debug-logs
       PIP_LOG_FILE: /tmp/pip.log
+      NODE_OPTIONS: "--max_old_space_size=4096"
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v1
