--- a/cloud-formation/delay/package.json
+++ b/cloud-formation/delay/package.json
@@ -13,7 +13,9 @@
     "package": "cfn submit --dry-run -vv && cp ${npm_package_name}.zip ${npm_package_name}-${npm_package_version}.zip",
     "publish": "npm run package && aws s3 cp ${npm_package_name}-${npm_package_version}.zip s3://community-resource-provider-catalog/${npm_package_name}-${npm_package_version}.zip",
     "test": "npx jest",
-    "test:integration": "cfn test",
+    "test:integration": "npx npm-run-all -p -r samstart cfntest",
+    "cfntest": "cfn test -vv >> cfn.log",
+    "samstart": "sam local start-lambda -l sam.log",
     "validate": "cfn validate"
   },
   "repository": {
