--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "lint:fix": "npx eslint --fix --ext .ts,.js .",
         "test": "npx jest --runInBand --no-cache",
         "test:debug": "npx --node-arg=--inspect jest --runInBand",
-        "test:integration": "npx lerna run test:integration",
+        "test:integration": "npx lerna run test:integration -- -vv",
         "validate": "npx lerna run validate -- -vv"
     },
     "engines": {
@@ -34,6 +34,7 @@
     },
     "devDependencies": {
         "@jurijzahn8019/aws-promise-jest-mock": "^2.1.5",
+        "@tsconfig/node10": "^1.0.7",
         "@types/jest": "^26.0.1",
         "@types/node": "^12.0.0",
         "@typescript-eslint/eslint-plugin": "^4.0.1",
@@ -47,6 +48,7 @@
         "eslint-plugin-prettier": "^3.1.4",
         "jest": "^26.4.2",
         "lerna": "^3.22.1",
+        "npm-run-all": "^4.1.5",
         "prettier": "^2.1.1",
         "rimraf": "^3.0.2",
         "ts-jest": "^26.3.0",
