--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "cSpell.words": [
         "Upsert"
-    ]
+    ],
+    "jest.pathToConfig": "./jest.config.js",
+    "jest.enableSnapshotUpdateMessages": false,
+    "jest.autoEnable": false,
 }
