--- a/iam/password-policy/.rpdk-config
+++ b/iam/password-policy/.rpdk-config
@@ -5,8 +5,7 @@
     "entrypoint": "dist/handlers.entrypoint",
     "testEntrypoint": "dist/handlers.testEntrypoint",
     "settings": {
-        "useDocker": false,
-        "protocolVersion": "2.0.0",
-        "buildCommand": "npm run build && NPM_CONFIG_OPTIONAL=0 NPM_CONFIG_FUND=0 sam build --build-dir ./build --debug"
+        "useDocker": true,
+        "protocolVersion": "2.0.0"
     }
 }
