republished all types that require roles, modified installation instructions

--- a/ec2/ebs-encryption-defaults/package.json
+++ b/ec2/ebs-encryption-defaults/package.json
@@ -9,9 +9,9 @@
     "scripts": {
         "build": "npx tsc",
         "prepack": "npm run build",
-        "submit": "cfn generate && npm run build && cfn submit -vv --region us-east-1 --set-default",
+        "submit": "cfn generate && npm run build && cfn submit -vv --region eu-west-1 --set-default",
         "package": "cfn generate && npm run build && cfn submit --dry-run -vv && cp ${npm_package_name}.zip ${npm_package_name}-${npm_package_version}.zip",
-        "publish": "npm run package && aws s3 cp ${npm_package_name}-${npm_package_version}.zip s3://community-resource-provider-catalog/${npm_package_name}-${npm_package_version}.zip",
+        "publish": "npm run package && aws s3 cp ${npm_package_name}-${npm_package_version}.zip s3://community-resource-provider-catalog/${npm_package_name}-${npm_package_version}.zip && aws s3 cp resource-role.yaml s3://community-resource-provider-catalog/${npm_package_name}-resource-role-${npm_package_version}.yml",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "dependencies": {
