--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Install Dependencies Node.js
         id: install_nodejs
         run: |
-          npm ci --optional && npx lerna bootstrap && npm run build
+          npm ci --optional && npx lerna bootstrap --ci && npm run build
       - name: Run Automated Testing
         id: automated_testing
         run: |
