--- a/iam/password-policy/package.json
+++ b/iam/password-policy/package.json
@@ -1,45 +1,45 @@
 {
-  "name": "community-iam-passwordpolicy",
-  "version": "0.2.0",
-  "description": "CloudFormation Resource Provider for AWS IAM Password Policy",
-  "main": "dist/handlers.js",
-  "files": [
-    "dist"
-  ],
-  "scripts": {
-    "build": "npx tsc",
-    "prepack": "cfn generate && npm run build",
-    "submit": "npm run prepack && cfn submit -vv --region us-east-1 --set-default",
-    "version": "npm run prepack && cfn submit --dry-run -vv && cp ${npm_package_name}.zip ${npm_package_name}-${npm_package_version}.zip",
-    "publish": "npm run package && aws s3 cp ${npm_package_name}-${npm_package_version}.zip s3://community-resource-provider-catalog/${npm_package_name}-${npm_package_version}.zip",
-    "test": "npx jest",
-    "test:integration": "cfn test",
-    "validate": "cfn validate"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/org-formation/aws-resource-providers.git"
-  },
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/org-formation/aws-resource-providers/issues"
-  },
-  "homepage": "https://github.com/org-formation/aws-resource-providers#readme",
-  "engines": {
-    "node": ">=10.4.0",
-    "npm": ">=6.0.0"
-  },
-  "dependencies": {
-    "cfn-rpdk": "https://github.com/eduardomourar/cloudformation-cli-typescript-plugin/releases/download/v0.3.2/cfn-rpdk-0.3.2.tgz",
-    "class-transformer": "^0.3.1",
-    "uuid": "^7.0.3"
-  },
-  "devDependencies": {
-    "@types/node": "^12.0.0",
-    "@types/uuid": "^7.0.3",
-    "typescript": "^3.8.3"
-  },
-  "optionalDependencies": {
-    "aws-sdk": "~2.631.0"
-  }
+    "name": "community-iam-passwordpolicy",
+    "version": "0.2.0",
+    "description": "CloudFormation Resource Provider for AWS IAM Password Policy",
+    "main": "dist/handlers.js",
+    "files": [
+        "dist"
+    ],
+    "scripts": {
+        "build": "npx tsc",
+        "prepack": "cfn generate && npm run build",
+        "submit": "npm run prepack && cfn submit -vv --region us-east-1 --set-default",
+        "version": "npm run prepack && cfn submit --dry-run -vv && cp ${npm_package_name}.zip ${npm_package_name}-${npm_package_version}.zip",
+        "publish": "npm run package && aws s3 cp ${npm_package_name}-${npm_package_version}.zip s3://community-resource-provider-catalog/${npm_package_name}-${npm_package_version}.zip",
+        "test": "npx jest",
+        "test:integration": "cfn test",
+        "validate": "cfn validate"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/org-formation/aws-resource-providers.git"
+    },
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/org-formation/aws-resource-providers/issues"
+    },
+    "homepage": "https://github.com/org-formation/aws-resource-providers#readme",
+    "engines": {
+        "node": ">=10.4.0",
+        "npm": ">=6.0.0"
+    },
+    "dependencies": {
+        "cfn-rpdk": "https://github.com/eduardomourar/cloudformation-cli-typescript-plugin/releases/download/v0.3.2/cfn-rpdk-0.3.2.tgz",
+        "class-transformer": "^0.3.1",
+        "uuid": "^7.0.3"
+    },
+    "devDependencies": {
+        "@types/node": "^12.0.0",
+        "@types/uuid": "^7.0.3",
+        "typescript": "^3.8.3"
+    },
+    "optionalDependencies": {
+        "aws-sdk": "^2.656.0"
+    }
 }
