--- a/iam/saml-provider/package.json
+++ b/iam/saml-provider/package.json
@@ -20,7 +20,9 @@
     },
     "devDependencies": {
         "@types/node": "^12.0.0",
-        "typescript": "^3.8.3",
+        "typescript": "^3.8.3"
+    },
+    "optionalDependencies": {
         "aws-sdk": "^2.656.0"
     }
 }
