--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "@types/node": "^12.0.0",
         "@typescript-eslint/eslint-plugin": "^4.0.1",
         "@typescript-eslint/parser": "^4.0.1",
+        "aws-sdk": "~2.631.0",
         "eslint": "^7.7.0",
         "eslint-config-prettier": "^6.11.0",
         "eslint-import-resolver-node": "^0.3.4",
@@ -53,9 +54,6 @@
         "rimraf": "^3.0.2",
         "ts-jest": "^26.3.0",
         "typescript": "^3.8.3"
-    },
-    "optionalDependencies": {
-        "aws-sdk": "~2.631.0"
     },
     "prettier": {
         "parser": "typescript",
