--- a/service-quotas/cloud-formation/package.json
+++ b/service-quotas/cloud-formation/package.json
@@ -21,7 +21,9 @@
     },
     "devDependencies": {
         "@types/node": "^12.0.0",
-        "typescript": "^3.8.3",
+        "typescript": "^3.8.3"
+    },
+    "optionalDependencies": {
         "aws-sdk": "^2.656.0"
     }
 }
