--- a/s3/public-access-block/package.json
+++ b/s3/public-access-block/package.json
@@ -20,6 +20,7 @@
     },
     "devDependencies": {
         "@types/node": "^12.0.0",
+        "@types/uuid": "^7.0.3",
         "typescript": "^3.8.3"
     },
     "optionalDependencies": {
