--- a/common/package.json
+++ b/common/package.json
@@ -1,8 +1,9 @@
 {
-    "name": "community-resource-providers-common",
+    "name": "aws-resource-providers-common",
     "version": "0.1.2",
     "description": "",
-    "main": "index.js",
+    "private": false,
+    "main": "lib/index.js",
     "scripts": {
         "build": "npx tsc",
         "prepublishOnly": "npm run build",
@@ -14,7 +15,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "cfn-rpdk": "https://github.com/eduardomourar/cloudformation-cli-typescript-plugin/releases/download/v0.3.0/cfn-rpdk-0.3.0.tgz"
+        "cfn-rpdk": "https://github.com/eduardomourar/cloudformation-cli-typescript-plugin/releases/download/v0.3.2/cfn-rpdk-0.3.2.tgz"
     },
     "devDependencies": {
         "@types/node": "^12.0.0",
