--- a/service-quotas/cloud-formation/package.json
+++ b/service-quotas/cloud-formation/package.json
@@ -2,6 +2,7 @@
     "name": "community-servicequotas-cloudformation",
     "version": "0.1.0",
     "description": "AWS custom resource provider named Community::ServiceQuotas::CloudFormation.",
+    "private": true,
     "main": "dist/handlers.js",
     "files": [
         "dist"
@@ -17,7 +18,7 @@
     "dependencies": {
         "cfn-rpdk": "https://github.com/eduardomourar/cloudformation-cli-typescript-plugin/releases/download/v0.3.0/cfn-rpdk-0.3.0.tgz",
         "class-transformer": "^0.3.1",
-        "community-resource-providers-common": "https://github.com/org-formation/aws-resource-providers/releases/download/common-0.1.0/community-resource-providers-common-0.1.2.tgz"
+        "aws-resource-providers-common": "https://github.com/org-formation/aws-resource-providers/releases/download/common-0.1.0/community-resource-providers-common-0.1.2.tgz"
     },
     "devDependencies": {
         "@types/node": "^12.0.0",
