--- a/common/package.json
+++ b/common/package.json
@@ -1,16 +1,16 @@
 {
     "name": "aws-resource-providers-common",
-    "version": "0.1.2",
+    "version": "0.2.0",
     "description": "",
     "private": false,
-    "main": "lib/index.js",
+    "main": "dist/index.js",
     "scripts": {
         "build": "npx tsc",
         "prepublishOnly": "npm run build",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "files": [
-        "lib/**/*"
+        "dist/**/*"
     ],
     "author": "",
     "license": "ISC",
