--- a/common/tsconfig.json
+++ b/common/tsconfig.json
@@ -12,10 +12,10 @@
         "declaration": true,
         "allowJs": true,
         "experimentalDecorators": true,
-        "outDir": "lib"
+        "outDir": "dist"
     },
     "include": [
-        "src"
+        "src/**/*.ts"
     ],
     "exclude": [
         "node_modules"
