--- a/iam/password-policy/package.json
+++ b/iam/password-policy/package.json
@@ -2,6 +2,7 @@
     "name": "community-iam-passwordpolicy",
     "version": "0.2.0",
     "description": "CloudFormation Resource Provider for AWS IAM Password Policy",
+    "private": true,
     "main": "dist/handlers.js",
     "files": [
         "dist"
@@ -32,6 +33,7 @@
         "npm": ">=6.0.0"
     },
     "dependencies": {
+        "aws-resource-providers-common": "https://github.com/org-formation/aws-resource-providers/releases/download/common-0.1.0/aws-resource-providers-common-0.2.0.tgz",
         "cfn-rpdk": "https://github.com/eduardomourar/cloudformation-cli-typescript-plugin/releases/download/v0.3.2/cfn-rpdk-0.3.2.tgz",
         "class-transformer": "^0.3.1",
         "uuid": "^7.0.3"
