--- a/iam/saml-provider/package.json
+++ b/iam/saml-provider/package.json
@@ -2,6 +2,7 @@
     "name": "community-iam-samlprovider",
     "version": "0.1.0",
     "description": "AWS custom resource provider named Community::IAM::SamlProvider.",
+    "private": true,
     "main": "dist/handlers.js",
     "files": [
         "dist"
