--- a/common/package.json
+++ b/common/package.json
@@ -1,20 +1,21 @@
 {
-    "name": "community-resource-providers-common",
-    "version": "0.1.2",
+    "name": "aws-resource-providers-common",
+    "version": "0.2.0",
     "description": "",
-    "main": "index.js",
+    "private": false,
+    "main": "dist/index.js",
     "scripts": {
         "build": "npx tsc",
         "prepublishOnly": "npm run build",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "files": [
-        "lib/**/*"
+        "dist/**/*"
     ],
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "cfn-rpdk": "https://github.com/eduardomourar/cloudformation-cli-typescript-plugin/releases/download/v0.3.0/cfn-rpdk-0.3.0.tgz"
+        "cfn-rpdk": "https://github.com/eduardomourar/cloudformation-cli-typescript-plugin/releases/download/v0.3.2/cfn-rpdk-0.3.2.tgz"
     },
     "devDependencies": {
         "@types/node": "^12.0.0",
