--- a/common/tsconfig.json
+++ b/common/tsconfig.json
@@ -1,18 +1,21 @@
 {
     "compilerOptions": {
-        "target": "ES2020",
+        "lib": ["es2018"],
         "module": "commonjs",
+        "target": "es2018",
         "noImplicitAny": true,
         "alwaysStrict": true,
         "esModuleInterop": true,
         "moduleResolution": "node",
+        "skipLibCheck": true,
+        "forceConsistentCasingInFileNames": true,
         "declaration": true,
         "allowJs": true,
         "experimentalDecorators": true,
-        "outDir": "lib"
+        "outDir": "dist"
     },
     "include": [
-        "src"
+        "src/**/*.ts"
     ],
     "exclude": [
         "node_modules"
