--- a/iam/password-policy/package.json
+++ b/iam/password-policy/package.json
@@ -2,6 +2,7 @@
     "name": "community-iam-passwordpolicy",
     "version": "0.2.0",
     "description": "CloudFormation Resource Provider for AWS IAM Password Policy",
+    "private": true,
     "main": "dist/handlers.js",
     "files": [
         "dist"
@@ -12,8 +13,10 @@
         "submit": "npm run prepack && cfn submit -vv --region eu-west-1 --set-default",
         "package": "npm run prepack && cfn submit --dry-run -vv && cp ${npm_package_name}.zip ${npm_package_name}-${npm_package_version}.zip",
         "version": "npm run package && aws s3 cp ${npm_package_name}-${npm_package_version}.zip s3://community-resource-provider-catalog/${npm_package_name}-${npm_package_version}.zip && aws s3 cp resource-role.yaml s3://community-resource-provider-catalog/${npm_package_name}-resource-role-${npm_package_version}.yml",
-        "test": "npx jest",
-        "test:integration": "cfn test",
+        "test": "npx jest --config ../../jest.config.js --rootDir .",
+        "test:integration": "npx npm-run-all -p -r samstart cfntest",
+        "cfntest": "cfn test -vv >> cfn.log",
+        "samstart": "sam local start-lambda -l sam.log",
         "validate": "cfn validate"
     },
     "repository": {
@@ -30,6 +33,7 @@
         "npm": ">=6.0.0"
     },
     "dependencies": {
+        "aws-resource-providers-common": "https://github.com/org-formation/aws-resource-providers/releases/download/common-0.2.0/aws-resource-providers-common-0.2.0.tgz",
         "cfn-rpdk": "https://github.com/eduardomourar/cloudformation-cli-typescript-plugin/releases/download/v0.3.2/cfn-rpdk-0.3.2.tgz",
         "class-transformer": "^0.3.1",
         "uuid": "^7.0.3"
