--- a/service-quotas/cloud-formation/package.json
+++ b/service-quotas/cloud-formation/package.json
@@ -2,6 +2,7 @@
     "name": "community-servicequotas-cloudformation",
     "version": "0.1.0",
     "description": "AWS custom resource provider named Community::ServiceQuotas::CloudFormation.",
+    "private": true,
     "main": "dist/handlers.js",
     "files": [
         "dist"
@@ -12,7 +13,11 @@
         "submit": "npm run prepack && cfn submit -vv --region eu-west-1 --set-default",
         "package": "npm run prepack && cfn submit --dry-run -vv && cp ${npm_package_name}.zip ${npm_package_name}-${npm_package_version}.zip",
         "version": "npm run package && aws s3 cp ${npm_package_name}-${npm_package_version}.zip s3://community-resource-provider-catalog/${npm_package_name}-${npm_package_version}.zip && aws s3 cp resource-role.yaml s3://community-resource-provider-catalog/${npm_package_name}-resource-role-${npm_package_version}.yml",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "npx jest --config ../../jest.config.js --rootDir .",
+        "test:integration": "npx npm-run-all -p -r samstart cfntest",
+        "cfntest": "cfn test -vv >> cfn.log",
+        "samstart": "sam local start-lambda -l sam.log",
+        "validate": "cfn validate"
     },
     "dependencies": {
         "cfn-rpdk": "https://github.com/eduardomourar/cloudformation-cli-typescript-plugin/releases/download/v0.3.0/cfn-rpdk-0.3.0.tgz",
