added uuid to primaryId of principalAssignments

--- a/sso/principal-assignments/resource-role.yaml
+++ b/sso/principal-assignments/resource-role.yaml
@@ -23,11 +23,8 @@ Resources:
             Statement:
               - Effect: Allow
                 Action:
-                - "initech:CreateReport"
-                - "initech:DeleteReport"
-                - "initech:DescribeReport"
-                - "initech:ListReports"
-                - "initech:UpdateReport"
+                - "ssoadmin:createAccountAssignment"
+                - "ssoadmin:deleteAccountAssignment"
                 Resource: "*"
 Outputs:
   ExecutionRoleArn:
