--- a/code-commit/approval-rule-template/resource-role.yaml
+++ b/code-commit/approval-rule-template/resource-role.yaml
@@ -26,6 +26,7 @@ Resources:
                 - "codecommit:CreateApprovalRuleTemplate"
                 - "codecommit:DeleteApprovalRuleTemplate"
                 - "codecommit:GetApprovalRuleTemplate"
+                - "codecommit:ListApprovalRuleTemplates"
                 - "codecommit:UpdateApprovalRuleTemplateContent"
                 - "codecommit:UpdateApprovalRuleTemplateDescription"
                 - "codecommit:UpdateApprovalRuleTemplateName"
