--- a/sso/principal-assignments/package.json
+++ b/sso/principal-assignments/package.json
@@ -4,27 +4,29 @@
     "description": "AWS custom resource provider named Community::SSO::PrincipalAssignments.",
     "main": "dist/handlers.js",
     "files": [
-        "dist"
+        "dist",
+        "apis",
+        "ssoadmin"
     ],
     "scripts": {
         "build": "npx tsc",
         "prepack": "cfn generate && npm run build",
-        "submit": "npm run prepack && cfn submit -vv --region eu-west-1 --set-default",
+        "submit": "npm run prepack && cfn submit -vv --region us-east-1 --set-default",
         "package": "npm run prepack && cfn submit --dry-run -vv && cp ${npm_package_name}.zip ${npm_package_name}-${npm_package_version}.zip",
         "version": "aws s3 cp ${npm_package_name}-${npm_package_version}.zip s3://community-resource-provider-catalog/${npm_package_name}-${npm_package_version}.zip && aws s3 cp resource-role.yaml s3://community-resource-provider-catalog/${npm_package_name}-resource-role-${npm_package_version}.yml",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "dependencies": {
-        "aws-resource-providers-common": "https://github.com/org-formation/aws-resource-providers/releases/download/common-0.2.0/aws-resource-providers-common-0.2.0.tgz",
         "cfn-rpdk": "https://github.com/eduardomourar/cloudformation-cli-typescript-plugin/releases/download/v0.3.2/cfn-rpdk-0.3.2.tgz",
         "class-transformer": "^0.3.1",
-        "uuid": "^7.0.3",
-        "aws-sdk": "^2.754.0"
+        "uuid": "^7.0.3"
     },
     "devDependencies": {
         "@types/node": "^12.0.0",
         "@types/uuid": "^7.0.3",
         "typescript": "^3.8.3"
     },
-    "optionalDependencies": {}
+    "optionalDependencies": {
+        "aws-sdk": "^2.631.0"
+    }
 }
