--- a/sso/principal-assignments/tsconfig.json
+++ b/sso/principal-assignments/tsconfig.json
@@ -6,12 +6,12 @@
         "alwaysStrict": true,
         "esModuleInterop": true,
         "moduleResolution": "node",
-        "allowJs": true,
+        "allowJs": false,
         "experimentalDecorators": true,
-        "outDir": "dist"
+        "outDir": "dist",
     },
     "include": [
-        "src/**/*.ts"
+        "src/**/*.ts",
     ],
     "exclude": [
         "node_modules"
