--- a/code-commit/approval-rule-template/example.yml
+++ b/code-commit/approval-rule-template/example.yml
@@ -3,11 +3,12 @@ Resources:
   ApprovalRuleTemplate:
     Type: 'Community::CodeCommit::ApprovalRuleTemplate'
     Properties:
-      ApprovalRuleTemplateName: 'test'
-      ApprovalRuleTemplateDescription: 'test'
-      ApprovalRuleTemplateContent:
+      Name: 'test'
+      Description: : 'test'
+      Content:
         Version: '2018-11-08'
-        DestinationReferences: 'refs/heads/master'
+        DestinationReferences:
+          - 'refs/heads/master'
         Statements:
           - Type: 'Approvers'
             NumberOfApprovalsNeeded: 2
